[package]
name = "tracing-causality"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
description = "A tracing layer that tracks the causal relationships between spans, and can be concurrently queried elsewhere."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
futures-core = "0.3"
futures = "0.3"
tracing-core = "0.1.29"
tracing-subscriber = "0.3"

[dev-dependencies]
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
